# CPPML

./: .gitignore  CMakeLists.txt  README.md
include/: DataHandler.hpp  Layers.hpp  LossF.hpp  Networks.hpp  Tensor.hpp
src/: DataHandler.cpp  Layers.cpp  LossF.cpp  Networks.cpp  Ten.cpp  Tensor.cpp  main.cpp
tests/: Matmul.cpp
